# clicktogether

./: Cargo.toml  README.md  pre_build.sh
.github/workflows/: rust.yml
src/: client.rs  main.rs  server.rs
