[package]
name = "clicktogether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
crossterm = "0.26"
warp = "0.3"
tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "sync"] }
clap-port-flag = "0.4.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
enigo = "0.1.2"
