[package]
name = "clicktogether"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26", features = ["event-stream"] }
clap = { version = "4.3.12", features = ["derive"] }
warp = "0.3"
tokio = { version = "1.29", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "signal",
  "macros",
] }
clap-port-flag = { version = "0.4.0", default-features = false }
tokio-stream = { version = "0.1.14", features = ["net"] }
enigo = "0.1.2"
ctrlc = { version = "3.4.0", features = ["termination"] }
futures = "0.3.28"
reqwest = "0.11.18"
